# clap-to-open

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
data/: clap-to-open.desktop.in
scripts/: bootstrap.ps1  bootstrap.sh  install.ps1  install.sh  uninstall.sh
src/clap_to_open/: __init__.py  apps.py  boot.py  cli.py  config.py  doctor.py  hotkey.py  hotkey_agent.py  launchspec.py  layout.py  listener.py  monitors.py  paths.py  save.py  service.py  sound.py  windows.py
src/clap_to_open/web/: __init__.py  server.py
src/clap_to_open/web/static/: app.js  style.css
src/clap_to_open/web/templates/: index.html
systemd/: clap-to-open.service.in
tests/: smoke.py
