[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "clap-to-open"
version = "1.0.0"
description = "Clap to relaunch your whole workspace — apps snapped to the right monitor. Linux & Windows, with a web control panel."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Forrest404" }]
keywords = ["clap", "workspace", "window-manager", "automation", "productivity",
            "gnome", "wayland", "windows", "desktop"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Environment :: X11 Applications :: Gnome",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment",
    "Topic :: Utilities",
    "Intended Audience :: End Users/Desktop",
]
dependencies = [
    "clap-detector",
    "flask>=3.0",
    # Windows-only: window/process/shortcut access for the Win32 backend.
    "pywin32; sys_platform == 'win32'",
    "psutil; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/Forrest404/clap-to-open"
Repository = "https://github.com/Forrest404/clap-to-open"
Issues = "https://github.com/Forrest404/clap-to-open/issues"
Changelog = "https://github.com/Forrest404/clap-to-open/blob/main/CHANGELOG.md"

[project.scripts]
clap = "clap_to_open.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clap_to_open = ["web/templates/*.html", "web/static/*"]
